--- a/src/styles/bg.css
+++ b/src/styles/bg.css
@@ -16,4 +16,8 @@
     #hero {
         background-image: none;
     }
+
+    #hero-dt {
+        background-image: url(../images/HOLY\ M\ OLY\ HOL\ Y\ MOLY\ HOLY\ M\ OLY\ HOL\ YMOLY\ Y.png);
+    }
 }
