--- a/src/styles/burgermenu.css
+++ b/src/styles/burgermenu.css
@@ -74,7 +74,13 @@
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 600;
   margin-top: 2rem;
-  width: 20%;
+  width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .bm-item {
+    width: 20%;
+  }
 }
 
 .bm-item:hover {
